--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="alternate icon" href="/vite.svg" />
     
     <!-- Theme color -->
     <meta name="theme-color" content="#10b981" />
